--- a/requirements.txt
+++ b/requirements.txt
@@ -86,7 +86,7 @@ toolz==0.12.1
 tornado==6.4
 tqdm==4.66.1
 typing-inspect==0.9.0
-typing_extensions==4.9.0
+typing_extensions>=4.11,<5
 tzdata==2023.4
 tzlocal==5.2
 urllib3==2.0.7
